# rustnes

./: .gitignore  LICENSE  README.md
nes/: Cargo.toml
nes/misc/: ntsc_small.c
nes/src/: bus.rs  controllers.rs  dma.rs  error.rs  lib.rs  mapper_debug.rs  mapper_nrom.rs  mappers.rs  nes_ntsc.rs  palette.rs  ppu.rs  ppu_bus.rs  ppu_pinout.rs  ppu_registers.rs  ppu_viewer.rs
nes/src/consoles/: mod.rs  nes_ntsc.rs
nes/src/mappers/: mapper1.rs  mapper3.rs  mapper_debug.rs  mapper_nrom.rs  mapper_null.rs  mod.rs
nes/src/ppu/: background.rs  bus.rs  core.rs  mod.rs  operations.rs  palette_ram.rs  ppu_bus.rs  ppu_operations.rs  ppu_registers.rs  ppu_renderer.rs  ppu_viewer.rs  rp2c02.rs  scanline_postrender.rs  scanline_prerender.rs  scanline_render.rs  scanline_vblank.rs  sprites.rs  ssprites.rs
nes/src/utils/: average_duration.rs  cpu_trace_logger.rs  frame_limiter.rs  mod.rs  paging.rs  ppu_trace_logger.rs  time.rs  trace_logger.rs
rustnes-dev/: Cargo.toml  nes_log.txt  nestest_rustnes_log.txt  ppu_log.txt
rustnes-dev/src/: main.rs  normal_mode.rs  single_frame_mode.rs
rustnes-dev/test_roms/2_test_src/: 2_test.cfg  2_test.s  2_test_header.s  compile_2_test.bat
rustnes-dev/test_roms/31_test_src/: 31_test.cfg  31_test.s  31_test_bat.py  31_test_header.s  compile_31_test.bat
rustnes-dev/test_roms/34_test_src/: 34_test.s  34_test_chr.s  34_test_header.s  compile_34_test.bat
rustnes-dev/test_roms/3_test_src/: 3_test.cfg  3_test.s  3_test_chr.s  3_test_header.s  chr4k.cfg  compile_3_test.bat
rustnes-dev/test_roms/7_test_src/: 7_test.cfg  7_test.s  (+2 more)
(+67 files in other folders)
