[package]
name = "nes"
version = "0.1.0"
authors = ["w1n5t0n99 <reedelam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mos = { path = "../mos" }
nes_rom = "0.1.0"
bitflags = "1.2.1"

[profile.release]
lto = "fat"
codegen-units = 1