[package]
name = "rustnes-dev"
version = "0.1.0"
authors = ["w1n5t0n99 <reedelam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nes = { path = "../nes" }
minifb = "0.17"
itertools = "0.10.0"

[profile.release]
lto = "fat"
codegen-units = 1
